<resources>
    <string name="app_name">LittleBlackBike</string>
    <string name="app_name_zh">小黑车</string>

    <string name="bike_id">车号：</string>
    <string name="bike_password">密码：</string>
    <string name="description_image_view_thumb_up">点赞图标</string>

    <string name="bike_id_without_colon">车号</string>
    <string name="bike_password_without_colon">密码</string>

    <string name="add_success_toast">上传成功，其他小伙伴能够看到你的分享</string>
    <string name="add_error_toast">上传失败，未知原因</string>
    <string name="already_add_the_bike">上传失败，您已上传过该车辆</string>

    <string name="input_bike_id_here">在此输入车号</string>
    <string name="image_view_arrow_description">提示用户输入车号的箭头</string>
    <string name="empty_box">空盒子</string>
    <string name="text_empty">空空如也</string>
    <string name="text_error">出错啦</string>
    <string name="is_loading">正在载入</string>

</resources>
