<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp" >

        <ImageView
            android:id="@+id/image_view_arrow"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/image_view_arrow_description"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_view_arrow"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/input_bike_id_here"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:drawableTop="@drawable/ic_empty_128"
        android:text="@string/text_empty"
        android:textColor="@color/black"
        android:textSize="16sp" />

</RelativeLayout>