<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:id="@+id/text_bike_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/bike_id" />

            <TextView
                android:id="@+id/bike_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/text_bike_id"
                android:layout_toRightOf="@+id/text_bike_id" />

            <TextView
                android:id="@+id/text_bike_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_bike_id"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/bike_password"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/bike_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_bike_id"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/text_bike_password"
                android:layout_toRightOf="@+id/text_bike_password"
                android:textColor="@color/black"
                android:textSize="30sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/image_view_thumb_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/description_image_view_thumb_up"
                android:src="@drawable/ic_thumb_up_white_24dp" />

            <TextView
                android:id="@+id/text_thumb_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/image_view_thumb_up"
                android:layout_toRightOf="@+id/image_view_thumb_up"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>